# streamlit-sandox

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: app.py  app_simple.py  greet.py  logger.py  model.py
typings/streamlit/: __init__.pyi
