[project]
name = "streamlit-sandbox"
version = "0.1.0"
description = "Streamlit app demonstrating external script interaction with Pydantic."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
# Assume Python 3.11
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Enable common rules including pyflakes, pycodestyle, isort
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
# Use black formatting style
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
# Define source directory
include = ["src"]
exclude = ["**/__pycache__", ".venv"]

# Report missing imports
reportMissingImports = true
# Report missing type stubs for libraries
reportMissingTypeStubs = false # Set to true for stricter checking if desired
# Report usage of unknown members (variables, functions)
reportUnknownMemberType = "warning"
# Report usage of variables before assignment
reportUnusedVariable = "warning"

# Define Python version
pythonVersion = "3.11"
pythonPlatform = "All"

