[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit-sandbox"
version = "0.1.0"
authors = [
  { name = "Takeshi Iijima", email = "example@example.com" },
]
description = "Streamlit application sandbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.25.0",
  "pandas>=1.5.0",
  "numpy>=1.24.0",
  "plotly>=5.14.0",
  "pydantic>=2.7.2",
  "structlog>=21.0.0",
  "uuid>=1.30",
  "mypy>=1.8.0",
  "ruff>=0.11.4",
  "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "pyright>=1.1.0",
  "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]


